# CMake file for opengl tutorial
#

include_directories(common)

add_subdirectory(common)
add_subdirectory(tutorial01_first_window)
add_subdirectory(tutorial02_red_triangle)
add_subdirectory(tutorial03_matrices)
add_subdirectory(tutorial04_colored_cube)
add_subdirectory(tutorial05_textured_cube)
add_subdirectory(texture_test_01)
